--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -18,7 +18,6 @@
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/transitions";
 
-
 // @import "../../node_modules/bootstrap/scss/tables";
 // @import "../../node_modules/bootstrap/scss/forms";
 // @import "../../node_modules/bootstrap/scss/dropdown";
@@ -45,5 +44,5 @@
 @import "global.scss";
 @import "navbar.scss";
 @import "mainheader.scss";
-// @import "services.scss";
+@import "features.scss";
 @import "bootstrap-overrides.scss";
