--- a/src/scss/_mainheader.scss
+++ b/src/scss/_mainheader.scss
@@ -1,10 +1,8 @@
 header {
-
-  .mainheader {
-    @include background-cover;
-
+  &.mainheader {
     background-image: url('../../img/header.jpg');
     background-position: center center;
+    background-size: cover;
     padding-bottom: calc(10rem - 56px);
     padding-top: 10rem;
 
@@ -26,7 +24,6 @@ header {
         font-size: 1.85rem;
       }
     }
-
     @media (min-width: 992px) {
       height: 100vh;
       min-height: 650px;
@@ -37,7 +34,6 @@ header {
         font-size: 3rem;
       }
     }
-
     @media (min-width: 1200px) {
       h1 {
         font-size: 4rem;
